changed the paragraph text

--- a/index.html
+++ b/index.html
@@ -29,7 +29,10 @@
     </head>
     <body>
 
-        <p>Hello world! This is HTML5 Boilerplate.</p>
+        <p>Hello world! I'm the starter file for Project 1.</p>
+
+
+
 
         <!-- This pulls jQuery from Google's Content Delivery Network -->
         <script src="//ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
